<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrey"
    tools:context="com.exfume.showerthoughts.MainActivity">


    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="8dp"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:src="@drawable/ic_lightbulb" />

    <LinearLayout
        android:id="@+id/postLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorBackgroundLight"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginRight="1dp"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_shower_thoughts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="4sp"
                android:text="@string/separator" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                tools:text="1 hour ago"/>


        </LinearLayout>

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackgroundBorderless"
            android:text="@string/author"
            tools:text="u/benjides"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quote"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="25sp"
            tools:text="If someone made an App would be awesome!"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/score"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/avd_score"
                android:gravity="center_horizontal"
                android:background="?android:selectableItemBackgroundBorderless"
                tools:text="10 Points" />

            <TextView
                android:id="@+id/comments"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/avd_comment"
                android:gravity="center_horizontal"
                android:background="?android:selectableItemBackgroundBorderless"
                tools:text="10 Comments" />

            <TextView
                android:id="@+id/share"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/avd_share"
                android:gravity="center_horizontal"
                android:background="?android:selectableItemBackgroundBorderless"
                android:text="@string/share" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/errorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorBackgroundLight"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:layout_marginRight="1dp"
                android:tint="@color/colorError"
                app:srcCompat="@drawable/ic_shower_thoughts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="6dp"
                android:text="@string/app_name"
                android:textColor="@color/colorError" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="65sp"
            android:padding="15dp"
            android:text="@string/sad_emoji" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/err_msg"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="22sp" />


        <TextView
            android:id="@+id/reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/reload"
            android:padding="10dp"
            android:textColor="@color/colorError"
            android:background="?android:selectableItemBackgroundBorderless"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />


    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
